--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,2 @@
-[package]
-name = "pluto"
-version = "0.1.0"
-authors = ["Daniel Doran <ddoran3@gmail.com>"]
-edition = "2018"
-
-[dependencies]
-structopt = "0.3.18"
+[workspace]
+members=["pluto","plasma"]
